Added Menu with UI elements

--- a/PCSA/PCSA/Base.lproj/Main.storyboard
+++ b/PCSA/PCSA/Base.lproj/Main.storyboard
@@ -61,7 +61,7 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="44" id="OUt-8a-G14"/>
                                         </constraints>
-                                        <state key="normal" title="Policies and Glosary"/>
+                                        <state key="normal" title="Policies and Glossary"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="54x-ad-OGD" customClass="ThemedButton" customModule="PCSA" customModuleProvider="target">
                                         <rect key="frame" x="155" y="359" width="250" height="44"/>
@@ -76,7 +76,7 @@
                                             <constraint firstAttribute="width" constant="250" id="7JQ-mm-VRu"/>
                                             <constraint firstAttribute="height" constant="44" id="9cD-JT-80l"/>
                                         </constraints>
-                                        <state key="normal" title="Get Medical Help"/>
+                                        <state key="normal" title="Get Help Now"/>
                                     </button>
                                 </subviews>
                                 <constraints>
@@ -107,7 +107,7 @@
                                 </constraints>
                             </scrollView>
                         </subviews>
-                        <color key="backgroundColor" red="0.019607843140000001" green="0.81960784310000001" blue="0.59215686270000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.18823529411764706" green="0.90588235294117647" blue="0.69019607843137254" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="uA8-69-XMS" firstAttribute="trailing" secondItem="2b0-zf-9SI" secondAttribute="trailingMargin" id="E25-T6-U97"/>
                             <constraint firstItem="uA8-69-XMS" firstAttribute="top" secondItem="7XB-Dz-tVt" secondAttribute="bottom" constant="15" id="Qog-cz-2QI"/>
@@ -155,7 +155,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.019607843140000001" green="0.81960784310000001" blue="0.59215686270000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.18823529410000001" green="0.90588235289999997" blue="0.69019607839999997" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="aaz-gL-g3e" firstAttribute="centerX" secondItem="O8k-ym-XcM" secondAttribute="centerX" id="NKW-lZ-5xS"/>
                             <constraint firstItem="eyM-SQ-Rkh" firstAttribute="centerY" secondItem="O8k-ym-XcM" secondAttribute="centerY" id="UIh-Ne-bwE"/>
@@ -204,31 +204,88 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
-                        <segue destination="x5M-YN-OuU" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegueSetController" id="Soi-ZI-eKn"/>
                         <segue destination="sbi-7h-4dK" kind="custom" identifier="sw_front" customClass="SWRevealViewControllerSegueSetController" id="Waf-mH-RgV"/>
+                        <segue destination="dW9-9S-mPw" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegueSetController" id="ZqV-jg-XYr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zsZ-CQ-6VX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="877" y="306"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="L7k-B1-3qX">
+        <!--Menu Table View Controller-->
+        <scene sceneID="W5P-LT-L01">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="M8k-PV-8ET" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="x5M-YN-OuU" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="6Qg-Vk-Ot3"/>
-                        <viewControllerLayoutGuide type="bottom" id="ofv-MP-Zfi"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="x19-F7-Dim">
+                <tableViewController id="dW9-9S-mPw" customClass="MenuTableViewController" customModule="PCSA" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="B1p-uH-e8s">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
+                        <color key="backgroundColor" red="0.98823529409999999" green="0.79607843140000001" blue="0.41960784309999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="separatorColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="ParentCell" rowHeight="60" id="eea-Jr-eum" customClass="MenuTableViewCell" customModule="PCSA" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="600" height="60"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eea-Jr-eum" id="SJt-tB-veF">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="59"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="krV-b4-PgP">
+                                            <rect key="frame" x="13" y="13" width="574" height="32"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottomMargin" secondItem="krV-b4-PgP" secondAttribute="bottom" constant="6" id="84d-yn-CW7"/>
+                                        <constraint firstItem="krV-b4-PgP" firstAttribute="leading" secondItem="SJt-tB-veF" secondAttribute="leadingMargin" constant="5" id="OMY-vU-0Mi"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="krV-b4-PgP" secondAttribute="trailing" constant="5" id="TbF-XK-Mop"/>
+                                        <constraint firstItem="krV-b4-PgP" firstAttribute="top" secondItem="SJt-tB-veF" secondAttribute="topMargin" constant="5" id="s9c-zF-0sZ"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <color key="backgroundColor" red="0.98823529409999999" green="0.79607843140000001" blue="0.41960784309999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <outlet property="textLabel" destination="krV-b4-PgP" id="S6e-bK-s6g"/>
+                                    <outlet property="title" destination="krV-b4-PgP" id="y0v-JY-4vr"/>
+                                </connections>
+                            </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ChildCell" rowHeight="60" id="qim-vp-al8" customClass="MenuTableViewCell" customModule="PCSA" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="88" width="600" height="60"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qim-vp-al8" id="UCl-Qf-NgD">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="59"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="G4F-Dc-uxd">
+                                            <rect key="frame" x="13" y="14" width="574" height="32"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottomMargin" secondItem="G4F-Dc-uxd" secondAttribute="bottom" constant="5" id="AjV-3g-gMn"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="G4F-Dc-uxd" secondAttribute="trailing" constant="5" id="NaV-mJ-ZMb"/>
+                                        <constraint firstItem="G4F-Dc-uxd" firstAttribute="leading" secondItem="UCl-Qf-NgD" secondAttribute="leadingMargin" constant="5" id="dGy-ts-6Af"/>
+                                        <constraint firstItem="G4F-Dc-uxd" firstAttribute="top" secondItem="UCl-Qf-NgD" secondAttribute="topMargin" constant="6" id="fyG-Kv-KFg"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <color key="backgroundColor" red="0.99215686274509807" green="0.86274509803921573" blue="0.61176470588235299" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <outlet property="childTitle" destination="G4F-Dc-uxd" id="l7p-Al-k1f"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="dW9-9S-mPw" id="KxV-LB-rcK"/>
+                            <outlet property="delegate" destination="dW9-9S-mPw" id="KHd-jU-NKC"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bpE-Mn-ku2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="877" y="1097"/>
+            <point key="canvasLocation" x="877" y="1074"/>
         </scene>
     </scenes>
     <resources>
