Add circle of trust edit numbers initial UI

--- a/PCSA/PCSA/Base.lproj/Main.storyboard
+++ b/PCSA/PCSA/Base.lproj/Main.storyboard
@@ -174,6 +174,13 @@
                                 <rect key="frame" x="184" y="300" width="52" height="30"/>
                                 <state key="normal" title="Button1"/>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y5u-2F-Fad">
+                                <rect key="frame" x="20" y="745" width="30" height="30"/>
+                                <state key="normal" title="Edit"/>
+                                <connections>
+                                    <segue destination="b4D-Ph-Znz" kind="show" id="Rnx-mk-2BG"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.18823529410000001" green="0.90588235289999997" blue="0.69019607839999997" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -187,7 +194,9 @@
                             <constraint firstItem="dkh-h2-MEV" firstAttribute="centerY" secondItem="pAM-SD-SSr" secondAttribute="centerY" id="KsR-1F-wmV"/>
                             <constraint firstItem="4jB-lR-sEx" firstAttribute="centerX" secondItem="pAM-SD-SSr" secondAttribute="centerX" multiplier="1.6" id="Njy-Uo-n3S"/>
                             <constraint firstItem="dkh-h2-MEV" firstAttribute="centerX" secondItem="pAM-SD-SSr" secondAttribute="centerX" id="Th4-Wf-BIC"/>
+                            <constraint firstItem="iEF-iw-mPW" firstAttribute="top" secondItem="Y5u-2F-Fad" secondAttribute="bottom" constant="25" id="UAu-Ut-fzC"/>
                             <constraint firstItem="dkh-h2-MEV" firstAttribute="top" secondItem="0Pq-KX-dVA" secondAttribute="centerY" constant="70" identifier="northHeight" id="bN2-j6-aGi"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="Y5u-2F-Fad" secondAttribute="leading" id="p0F-QD-9kJ"/>
                             <constraint firstItem="zSg-k0-2Eb" firstAttribute="centerX" secondItem="pAM-SD-SSr" secondAttribute="centerX" multiplier="0.7" id="sl8-O1-DN6"/>
                             <constraint firstItem="tql-N3-5gP" firstAttribute="top" secondItem="0Pq-KX-dVA" secondAttribute="top" id="v3N-LC-Ffu"/>
                             <constraint firstItem="PbU-5Y-fqL" firstAttribute="centerX" secondItem="pAM-SD-SSr" secondAttribute="centerX" multiplier="0.4" id="y26-cS-itp"/>
@@ -208,6 +217,98 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rlw-J7-mCd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3104" y="-353"/>
+        </scene>
+        <!--Edit numbers-->
+        <scene sceneID="aov-gt-fJq">
+            <objects>
+                <viewController title="Edit numbers" automaticallyAdjustsScrollViewInsets="NO" id="b4D-Ph-Znz" customClass="CircleOfTrustEditViewController" customModule="PCSA" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="62h-a6-KBu"/>
+                        <viewControllerLayoutGuide type="bottom" id="vU1-pg-kBg"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="dgC-mY-PWP">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="800"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xye-4h-XH5">
+                                <rect key="frame" x="0.0" y="74" width="600" height="716"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OxI-dV-PTb">
+                                        <rect key="frame" x="20" y="245" width="560" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8GL-ss-51d">
+                                        <rect key="frame" x="20" y="190" width="560" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="s34-tE-l6d">
+                                        <rect key="frame" x="20" y="25" width="560" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U9y-Em-FfG">
+                                        <rect key="frame" x="20" y="300" width="560" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wyS-Pn-lJN" customClass="ThemedButton" customModule="PCSA" customModuleProvider="target">
+                                        <rect key="frame" x="270" y="360" width="60" height="34"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="60" id="Flp-Nu-gx4"/>
+                                        </constraints>
+                                        <state key="normal" title="Save"/>
+                                    </button>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TGv-jG-adx">
+                                        <rect key="frame" x="20" y="80" width="560" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="X8o-yd-mpY">
+                                        <rect key="frame" x="20" y="135" width="560" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="TGv-jG-adx" firstAttribute="leading" secondItem="X8o-yd-mpY" secondAttribute="leading" id="3r1-dJ-Tre"/>
+                                    <constraint firstItem="8GL-ss-51d" firstAttribute="top" secondItem="X8o-yd-mpY" secondAttribute="bottom" constant="25" id="6UG-6n-Ayf"/>
+                                    <constraint firstItem="X8o-yd-mpY" firstAttribute="leading" secondItem="8GL-ss-51d" secondAttribute="leading" id="Me3-b6-F8L"/>
+                                    <constraint firstItem="U9y-Em-FfG" firstAttribute="top" secondItem="OxI-dV-PTb" secondAttribute="bottom" constant="25" id="R4Z-mY-EaH"/>
+                                    <constraint firstItem="OxI-dV-PTb" firstAttribute="leading" secondItem="U9y-Em-FfG" secondAttribute="leading" id="SiA-YL-52z"/>
+                                    <constraint firstItem="8GL-ss-51d" firstAttribute="trailing" secondItem="OxI-dV-PTb" secondAttribute="trailing" id="Ueg-2H-7DL"/>
+                                    <constraint firstAttribute="trailing" secondItem="s34-tE-l6d" secondAttribute="trailing" constant="20" id="ZCd-c7-25r"/>
+                                    <constraint firstItem="TGv-jG-adx" firstAttribute="trailing" secondItem="X8o-yd-mpY" secondAttribute="trailing" id="a3j-Xs-aif"/>
+                                    <constraint firstAttribute="bottom" secondItem="wyS-Pn-lJN" secondAttribute="bottom" constant="-44" id="apE-Em-Wix"/>
+                                    <constraint firstItem="s34-tE-l6d" firstAttribute="top" secondItem="Xye-4h-XH5" secondAttribute="top" constant="25" id="cxA-gN-j42"/>
+                                    <constraint firstItem="s34-tE-l6d" firstAttribute="leading" secondItem="TGv-jG-adx" secondAttribute="leading" id="dB3-YH-nre"/>
+                                    <constraint firstItem="wyS-Pn-lJN" firstAttribute="top" secondItem="U9y-Em-FfG" secondAttribute="bottom" constant="30" id="dMI-dD-0xS"/>
+                                    <constraint firstItem="X8o-yd-mpY" firstAttribute="top" secondItem="TGv-jG-adx" secondAttribute="bottom" constant="25" id="dsX-eJ-RRJ"/>
+                                    <constraint firstItem="8GL-ss-51d" firstAttribute="leading" secondItem="OxI-dV-PTb" secondAttribute="leading" id="gVi-xk-W6e"/>
+                                    <constraint firstItem="s34-tE-l6d" firstAttribute="leading" secondItem="Xye-4h-XH5" secondAttribute="leading" constant="20" id="ljN-MX-OSU"/>
+                                    <constraint firstItem="OxI-dV-PTb" firstAttribute="trailing" secondItem="U9y-Em-FfG" secondAttribute="trailing" id="mXc-QM-BtT"/>
+                                    <constraint firstItem="TGv-jG-adx" firstAttribute="top" secondItem="s34-tE-l6d" secondAttribute="bottom" constant="25" id="nlp-Eg-lTr"/>
+                                    <constraint firstItem="U9y-Em-FfG" firstAttribute="centerX" secondItem="wyS-Pn-lJN" secondAttribute="centerX" id="om3-Fi-Yji"/>
+                                    <constraint firstItem="s34-tE-l6d" firstAttribute="trailing" secondItem="TGv-jG-adx" secondAttribute="trailing" id="pg0-gj-2gD"/>
+                                    <constraint firstItem="OxI-dV-PTb" firstAttribute="top" secondItem="8GL-ss-51d" secondAttribute="bottom" constant="25" id="tWs-O1-FM9"/>
+                                    <constraint firstItem="X8o-yd-mpY" firstAttribute="trailing" secondItem="8GL-ss-51d" secondAttribute="trailing" id="uJF-mo-d2s"/>
+                                    <constraint firstItem="s34-tE-l6d" firstAttribute="centerX" secondItem="Xye-4h-XH5" secondAttribute="centerX" id="xlA-hk-dLg"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.18823529410000001" green="0.90588235289999997" blue="0.69019607839999997" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Xye-4h-XH5" secondAttribute="trailing" id="8QF-DL-l5K"/>
+                            <constraint firstItem="Xye-4h-XH5" firstAttribute="leading" secondItem="dgC-mY-PWP" secondAttribute="leading" id="L0R-Tg-fGb"/>
+                            <constraint firstItem="Xye-4h-XH5" firstAttribute="top" secondItem="62h-a6-KBu" secondAttribute="bottom" constant="10" id="LE9-T7-l1d"/>
+                            <constraint firstItem="vU1-pg-kBg" firstAttribute="top" secondItem="Xye-4h-XH5" secondAttribute="bottom" constant="10" id="aJk-At-pLz"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1e1-ap-RiU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3854" y="-353"/>
         </scene>
         <!--Splash View Controller-->
         <scene sceneID="INQ-pK-AF1">
